--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "license": "ISC",
   "author": "ADMIN@VLM",
-  "type": "ES MODULE",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
